--- a/styles.css
+++ b/styles.css
@@ -31,15 +31,16 @@ img {
 
 .toolbar .container {
   justify-content: space-between;
-  padding: 0 1.5rem;
+  padding: 10px 24px;
   align-items: center;
   background-color: #fff;
 }
 
-.toolbar .logo {
+
+.logo a{
+  text-decoration: none;
   font-weight: 700;
-  font-size: 1.125rem;
-  line-height: 1.25rem;
+  font-size: 18px;
 }
 
 .headline .container {
@@ -78,13 +79,19 @@ img {
 }
 
 .headline .social-media {
-  margin: 12px 24px;
   display: flex;
+  margin: 12px 24px;
   align-items: center;
+  padding: 0;
 }
 
 .headline .social-media-items {
   margin-right: 20px;
+}
+
+.social-media li {
+  list-style: none;
+ 
 }
 
 .social-media i {
