--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,13 @@ img {
   display: block;
 }
 
+.section-title {
+  color: #344563;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 24px;
+}
+
 .toolbar {
   color: #6070ff;
 }
@@ -56,6 +63,7 @@ img {
   align-items: center;
   background-color: #fff;
 }
+
 .logo {
   padding: 10px 12px;
 }
