--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@ img {
 }
 
 .container {
-  max-width: 480px;
   margin: 0 auto;
 }
 
@@ -85,9 +84,7 @@ img {
   color: #6070ff;
 }
 
-.header-wrapper {
-  display: flex;
-  flex-direction: column;
+.headline .wrapper {
   background-color: #f7f7f9;
 }
 
@@ -266,8 +263,6 @@ img {
 }
 
 .about-me-wrapper {
-  display: flex;
-  flex-direction: column;
   background-color: #f7f7f9;
 }
 
