--- a/styles.css
+++ b/styles.css
@@ -432,6 +432,20 @@ hr {
   padding: 0 24px;
 }
 
+.contact-title {
+  padding: 0;
+  color: #fff;
+  font-size: 40px;
+  line-height: 52px;
+}
+
+.contact-intro {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 28px;
+}
+
 .contact-form {
   display: flex;
   flex-direction: column;
@@ -464,20 +478,6 @@ hr {
   border-radius: 8px;
 }
 
-.contact-title {
-  padding: 0;
-  color: #fff;
-  font-size: 40px;
-  line-height: 52px;
-}
-
-.contact-intro {
-  color: #fff;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 28px;
-}
-
 .contact-form-submit {
   align-self: flex-start;
   background: #fff;
@@ -500,6 +500,10 @@ hr {
 
 @media screen and (min-width: 780px) {
   .header {
+    background-color: #f7f7f9;
+  }
+
+  .header-wrapper {
     background-color: #fff;
     border-radius: 0 0 0 120px;
   }
@@ -543,7 +547,7 @@ hr {
     background-size: 100% 100%;
     background-repeat: no-repeat;
     max-width: 1398px;
-    margin: 34px 8px;
+    padding: 34px 8px;
     min-height: 721px;
   }
 
@@ -577,10 +581,6 @@ hr {
     margin-top: 12px;
   }
 
-  .works .grid-container {
-    margin-top: -34px;
-  }
-
   .works .section-title {
     text-align: center;
   }
@@ -596,5 +596,84 @@ hr {
 
   .card:nth-child(odd) .project-snapshoot {
     order: 2;
+  }
+
+  .about-me-container {
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: #fff;
+    padding: 71px 142px;
+    border-radius: 0 120px 0 0;
+  }
+
+  .about-me-container .about-me-header {
+    width: 36%;
+    margin-right: 25px;
+  }
+
+  .about-me-container .about-me-skillset {
+    flex: 1;
+  }
+
+  .about-me-container .about-me-skillset .language-list {
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: #fff;
+  }
+
+  .about-me-skillset .language-list .language-item {
+    flex-direction: column;
+    text-align: center;
+    margin: 0 12px;
+  }
+
+  .about-me-skillset .language-list li + li {
+    margin-left: 12px;
+  }
+
+  .contact-me {
+    display: flex;
+    flex-direction: column;
+    border-top-left-radius: 100px;
+    background-color: #6070ff;
+    background-image: url("./img/desktop-version-contact-form-background.png");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    align-items: center;
+  }
+
+  .contact-me .contact-me-header {
+    text-align: center;
+  }
+
+  .contact-me-header .contact-title,
+  .contact-intro {
+    max-width: 569px;
+    margin-bottom: 12px;
+  }
+
+  .contact-me-header .contact-intro {
+    padding-bottom: 12px;
+  }
+
+  .contact-me .contact-form {
+    max-width: 447px;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 225px;
+  }
+
+  .contact-me .contact-form input,
+  textarea {
+    margin-bottom: 27px;
+  }
+
+  .contact-form .contact-form-submit {
+    align-self: center;
+  }
+
+  .footer hr {
+    display: none;
   }
 }
