--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,6 @@ img {
 }
 
 .btn {
-  text-decoration: none;
   font-size: 17px;
   line-height: 24px;
   font-weight: 600;
@@ -498,7 +497,7 @@ hr {
   margin-bottom: 8px;
 }
 
-@media screen and (min-width: 780px) {
+@media screen and (min-width: 992px) {
   .header {
     background-color: #f7f7f9;
   }
@@ -602,17 +601,17 @@ hr {
     flex-direction: row;
     justify-content: space-between;
     background-color: #fff;
-    padding: 71px 142px;
     border-radius: 0 120px 0 0;
+    padding: 71px 185px;
   }
 
   .about-me-container .about-me-header {
     width: 36%;
-    margin-right: 25px;
+    margin-right: 15px;
   }
 
   .about-me-container .about-me-skillset {
-    flex: 1;
+    width: calc(54% - 25px);
   }
 
   .about-me-container .about-me-skillset .language-list {
