Add bounce animations on Let's connect

--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,24 @@ img {
   cursor: not-allowed;
 }
 
+.bounce {
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+
+  40% {
+    transform: translateY(-3px);
+  }
+
+  60% {
+    transform: translateY(-3px);
+  }
+}
+
 .section-title {
   color: #344563;
   font-weight: 700;
