--- a/styles.css
+++ b/styles.css
@@ -363,6 +363,163 @@ img {
   align-self: flex-start;
 }
 
+/* Modal mobile */
+
+.modal-overlay {
+  position: fixed;
+  display: none;
+  z-index: 200;
+  padding: 12px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  backdrop-filter: blur(6px);
+  background-color: rgb(193, 199, 208, 0.4);
+}
+
+.modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  position: relative;
+  margin: 6px auto;
+  max-width: 90vw;
+  height: 95vh;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 8px 16px;
+}
+
+.modal .close-modal .fa-times {
+  font-size: 20px;
+  color: #67798e;
+  font-weight: 400;
+}
+
+.modal .modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+  padding: 0;
+  margin-bottom: 12px;
+  width: 100%;
+  border: none;
+}
+
+.modal .project-title {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 30px;
+  margin: 6px 0;
+  color: #172b4d;
+  text-transform: capitalize;
+}
+
+.modal .project-client {
+  font-size: 13px;
+  margin: 0;
+  padding: 0;
+  font-weight: 600;
+  line-height: 16px;
+  color: #344563;
+  text-transform: uppercase;
+}
+
+.modal .modal-header .role-year-ul {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  align-content: center;
+  width: 70%;
+}
+
+.modal .project-role,
+.project-year {
+  color: #7a869a;
+  font-size: 13px;
+  line-height: 16px;
+  font-weight: 600;
+}
+
+.modal .modal-header .role-year-ul .project-year {
+  margin-left: 32px;
+}
+
+.modal .featured-image-container {
+  width: 90%;
+  max-height: 60%;
+}
+
+.modal .featured-image {
+  width: 100%;
+  max-height: 100%;
+}
+
+.modal .project-description-div {
+  max-height: 80px;
+  overflow: hidden;
+}
+
+.modal .project-details {
+  position: relative;
+  max-width: 100%;
+}
+
+.modal .modal-description {
+  font-size: 15px;
+  padding: 12px 0;
+  font-weight: 400;
+  color: #344563;
+  line-height: 24px;
+}
+
+.modal .languages {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+}
+
+.modal .languages li {
+  font-size: 13px;
+  color: #6070ff;
+  line-height: 16px;
+  font-weight: 500;
+  background-color: #ebebff;
+  margin-right: 10px;
+  padding: 0.1em 0.4em;
+  border-radius: 10px;
+}
+
+.modal .modal-see-btn {
+  display: flex;
+  flex-direction: row;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+
+.modal .modal-see-btn a {
+  text-decoration: none;
+  color: #6070ff;
+}
+
+.modal .btn-modal-close {
+  position: absolute;
+  top: 12px;
+  right: 2%;
+  transition: 0ms;
+}
+
 .about-me-wrapper {
   background-color: #f7f7f9;
 }
@@ -699,6 +856,61 @@ hr {
 
   .card:nth-child(odd) .project-snapshoot {
     order: 2;
+  }
+
+  .modal-overlay {
+    margin: 0 auto;
+  }
+
+  .modal {
+    max-width: 1150px;
+    height: 95vh;
+    margin: 12px auto;
+    padding-top: 20px;
+    padding-right: 16px;
+    padding-left: 16px;
+    padding-bottom: 20px;
+  }
+
+  .modal .modal-header {
+    justify-content: flex-start;
+  }
+
+  .modal .project-client,
+  .project-role,
+  .project-year {
+    font-size: 18px;
+  }
+
+  .modal .modal-header .project-client {
+    margin-right: 28px;
+  }
+
+  .modal .project-details {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding: 6px 6px;
+  }
+
+  .modal .project-description-div {
+    flex: 2;
+    max-height: 75%;
+    overflow: hidden;
+  }
+
+  .modal .technologies-buttons {
+    margin-left: 32px;
+    padding-top: 12px;
+    flex: 1;
+  }
+
+  .modal .modal-see-btn {
+    justify-content: flex-start;
+  }
+
+  .modal .modal-see-btn .project-source {
+    margin-left: 24px;
   }
 
   .about-me-container {
