Add Java language to languages list

--- a/styles.css
+++ b/styles.css
@@ -607,6 +607,10 @@ hr {
   margin-right: 16px;
 }
 
+.language-item .language-icon img {
+  border-radius: 50%;
+}
+
 .programming-languages .language-item .language-name {
   font-size: 15px;
   font-weight: 500;
