--- a/styles.css
+++ b/styles.css
@@ -388,6 +388,7 @@ img {
   background-color: #fff;
   border-radius: 10px;
   padding: 8px 16px;
+  overflow: scroll;
 }
 
 .modal .close-modal .fa-times {
@@ -450,7 +451,6 @@ img {
 
 .modal .featured-image {
   width: 100%;
-  max-height: 100%;
 }
 
 .modal .project-description-div {
@@ -875,8 +875,7 @@ hr {
   }
 
   .modal {
-    max-width: 1150px;
-    height: 100%;
+    max-width: 80%;
     margin: 12px auto;
     padding-top: 20px;
     padding-right: 32px;
@@ -903,14 +902,12 @@ hr {
 
   .modal .featured-image-container {
     width: 100%;
-    height: 65%;
-    border-radius: 30px;
+    height: auto;
+    padding-bottom: 24px;
   }
 
   .modal .featured-image {
     width: 100%;
-    max-height: 100%;
-    border-radius: 30px;
   }
 
   .modal .project-details {
